--- a/_config.yml
+++ b/_config.yml
@@ -9,40 +9,39 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/Zurich
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Ethan Tregidga # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Website for Ethan Tregidga's research in astronomy and machine learning
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "hhtps://ethantreg.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: EthanTreg # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+#   username:  # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Ethan Tregidga
+  email: ethan.tregidga@epfl.ch # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://github.com/ethantreg # change to your github homepage
+    - https://uk.linkedin.com/in/ethan-tregidga
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
 
 google_site_verification: # fill in to your verification string
 
@@ -73,7 +72,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/images/Ethan Tregidga.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -113,7 +112,16 @@ assets:
 pwa:
   enabled: true # the option for PWA feature
 
-paginate: 10
+per_page: 1
+
+paginate: 1
+paginate_path: "./tabs2/research2/page:num/"
+
+pagination:
+  enabled: false
+  per_page: 1
+  # permalink: "/test/page/:num"
+  # title: ":title - page - :num"
 
 # The base URL of your site
 baseurl: ""
