--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "hhtps://ethantreg.github.io"
+url: "htps://ethantreg.github.io"
 
 github:
   username: EthanTreg # change to your github username
@@ -116,12 +116,6 @@ per_page: 1
 
 paginate: 1
 paginate_path: "./tabs2/research2/page:num/"
-
-pagination:
-  enabled: false
-  per_page: 1
-  # permalink: "/test/page/:num"
-  # title: ":title - page - :num"
 
 # The base URL of your site
 baseurl: ""
