Added papers up to 19/2/26. Changed research date format.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -39,3 +39,30 @@ d_finkbeiner:
 p_cargile:
   name: Phillip Cargile
   url: https://lweb.cfa.harvard.edu/~pcargile/
+d_harvey:
+  name: David Harvey
+  url: https://people.epfl.ch/david.harvey
+l_biggio:
+  name: Luca Biggio
+  url: https://cs.unibocconi.eu/faculty/luca-biggio
+f_vecchi:
+  name: Felix Vecchi
+  url: https://people.epfl.ch/felix.vecchi/
+j_nightingale:
+  name: James Nightingale
+  url: https://jamesnightingale.net/
+m_schaller:
+  name: Matthieu Schaller
+  url: https://home.strw.leidenuniv.nl/~schaller/
+j_schaye:
+  name: Joop Schaye
+  url: https://home.strw.leidenuniv.nl/~schaye/
+y_revaz:
+  name: Yves Revaz
+  url: https://people.epfl.ch/yves.revaz
+a_schneider:
+  name: Aurel Schneider
+  url: https://www.astro.uzh.ch/~aurel/
+f_redmen:
+  name: Fiona Redmen
+  url: https://es.linkedin.com/in/fionaredmen4physandastronomy
